--- a/src/index.css
+++ b/src/index.css
@@ -25,14 +25,14 @@ body {
   width: 100%;
   background-image: linear-gradient(
       to right,
-      rgba(101, 0, 163, 0.9),
-      rgba(24, 120, 175, 0.9)
+      rgba(0, 85, 225, 0.9),
+      rgba(90, 60, 100, 0.9)
     ),
     url("https://images.unsplash.com/photo-1546453667-8a8d2d07bc20?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1974&q=100");
 }
 
 .first-heading {
-  font-size: 65px;
+  font-size: 45px;
   letter-spacing: 5px;
   text-transform: uppercase;
   color: rgba(255, 255, 255, 0.92);
@@ -41,7 +41,7 @@ body {
 }
 
 .first-heading--thin {
-  font-weight: 300;
+  font-weight: 250;
 }
 
 .container {
@@ -112,7 +112,7 @@ body {
 .stat__number {
   color: #4d5457;
   font-weight: 600;
-  font-size: 35px;
+  font-size: 25px;
   margin-bottom: 10px;
 }
 
@@ -143,7 +143,7 @@ body {
   }
 
   .first-heading {
-    font-size: 7vw;
+    font-size: min(5vw, 45px);
   }
 
   .stat {
